<resources>
    <string name="app_name">Smort</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="shared_preference_quiz">currentQuiz</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="roundcmplt">Round Complete</string>
    <string name="correct">Correct</string>
    <string name="skipped">Skipped</string>
    <string name="wrong">Wrong</string>
    <string name="result">Result</string>
    <string name="retry">Retry</string>
    <string name="cntinue">Continue</string>
    <string name="checkans">See explaination >></string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">LOG IN</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="start">Start Quiz</string>
</resources>